fix title and subtitle spacing

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -94,12 +94,15 @@ body {
 .banner-title h1 {
     font-size: 120px;
     font-weight: bold;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 .banner-title p {
     font-size: 16px;
     font-weight: bold;
     word-spacing: 60px;
+    margin-top: 0;
 }
 
 .pros {
